# RPNCalc

./: .gitignore  AGENTS.md  DEV_STRATEGY.md  GUIDE.md  PROJECT.md  PythonForwardCompatibilityPolicy.md  PythonForwardCompatibilityPolicyCompact.md  PythonForwardCompatibilityPolicyRFC.md  PythonStyleGuidelines.md  README.md  TEST_FAILURE_TRIAGE.md  ci.bat  pyproject.toml  pytest.ini
docs/ai/: CREATE_TEST_SUITE_TASK.md  RUN_TEST_SUITE_AND_FIX_TASK.md  TEST_FAILURE_TRIAGE.md  Untitled.md
docs/drafts/: GUIDE.md  NOTES.md
pyenv/: Anaconda.bat  Anaconda.yml  Anaconda_bootstrap.yml  Anaconda_yml.bat  conda_far.bat
rpncalc/: pytest.ini
rpncalc/src/fb_rpncalc/: parser.py
rpncalc/src/rpncalc/: parser_fb.py  parser_fp.py
rpncalc/tests/: test_rpncalc_parser_fb.py  test_rpncalc_parser_fp.py
